Fix scrollbar eyesore and change font to Fira Code
Also set box-sizing: border-box to all elements to temporarily fix
padding issues, this scope can be narrowed in the future.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+* {
+  box-sizing: border-box;
+}
 
 html, body {
   height: 100%;
@@ -14,7 +16,7 @@ body {
     "status ccode . ."
     "status ccode . ."
     "status ccode . output";
-  font-family: 'Source Code Pro', monospace;
+  font-family: 'Fira Code', monospace;
 }
 
 .ccode-container {
@@ -44,6 +46,7 @@ body {
   background-color: var(--color-red);
 }
 .CodeMirror {
-  font-family: 'Source Code Pro', monospace;
+  font-family: 'Fira Code', monospace;
+  font-size: 15px;
   height: 100%;
 }
